Connected signals so the Track and Pattern comboboxes controls the pattern in the editors, fixed a sequencer bug that caused it to hold events until one beat into every new sequence entry

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,6 +11,7 @@ dino_SOURCES = \
 	patterneditor.cpp patterneditor.hpp \
 	cceditor.cpp cceditor.hpp \
 	sequencer.cpp sequencer.hpp \
+	singletextcombo.cpp singletextcombo.hpp \
 	trackwidget.cpp trackwidget.hpp \
 	evilscrolledwindow.hpp
 
