Added rulers to the pattern and sequence editors

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,6 +10,7 @@ dino_SOURCES = \
 	song.cpp song.hpp \
 	patterneditor.cpp patterneditor.hpp \
 	cceditor.cpp cceditor.hpp \
+	ruler.cpp ruler.hpp \
 	sequencer.cpp sequencer.hpp \
 	singletextcombo.cpp singletextcombo.hpp \
 	trackwidget.cpp trackwidget.hpp \
