The sequencer will only sequence when the big lock is unlocked

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @ALSA_CFLAGS@ @JACK_CFLAGS@
+AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @GTHREAD_CFLAGS@ @ALSA_CFLAGS@ @JACK_CFLAGS@
 
 bin_PROGRAMS = dino
 
@@ -16,4 +16,4 @@ dino_SOURCES = \
 	trackwidget.cpp trackwidget.hpp \
 	evilscrolledwindow.hpp
 
-dino_LDADD = @LIBGLADEMM_LIBS@ @ALSA_LIBS@ @JACK_LIBS@
+dino_LDADD = @LIBGLADEMM_LIBS@ @GTHREAD_LIBS@ @ALSA_LIBS@ @JACK_LIBS@
