Added a BPM track, changed JACK requirement from 0.99.5 to 0.99.0, added and connected signals that activates a track that is clicked in the sequence editor

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,6 +15,8 @@ dino_SOURCES = \
 	ruler.cpp ruler.hpp \
 	sequencer.cpp sequencer.hpp \
 	singletextcombo.cpp singletextcombo.hpp \
+	tempolabel.cpp tempolabel.hpp \
+	tempowidget.cpp tempowidget.hpp \
 	tracklabel.hpp tracklabel.cpp \
 	trackwidget.cpp trackwidget.hpp \
 	evilscrolledwindow.hpp
