--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,10 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(dino, 0.1.19)
+
+# Don't touch this line - it's updated automagically by dcvs
+AC_INIT(dino, 0.1.20)
+
 AC_CONFIG_SRCDIR([src/main.cpp])
 AM_INIT_AUTOMAKE
 
