Removed all traces of ALSA, the new JACK sequencer doesn't actually sequence anything at the moment

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,17 +1,18 @@
-AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @GTHREAD_CFLAGS@ @LIBXMLPP_CFLAGS@ @ALSA_CFLAGS@ @JACK_CFLAGS@ @LADCCA_CFLAGS@ @DEBUG_CFLAGS@
+AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @GTHREAD_CFLAGS@ @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @LADCCA_CFLAGS@ @DEBUG_CFLAGS@
 
 bin_PROGRAMS = dino
 
 dino_SOURCES = \
 	main.cpp \
+	deleter.cpp deleter.hpp \
 	dino.cpp dino.hpp \
-	jackclient.hpp jackclient.cpp \
 	pattern.cpp pattern.hpp \
 	track.cpp track.hpp \
 	song.cpp song.hpp \
 	octavelabel.cpp octavelabel.hpp \
 	patterneditor.cpp patterneditor.hpp \
 	cceditor.cpp cceditor.hpp \
+	ringbuffer.hpp \
 	ruler.cpp ruler.hpp \
 	sequencer.cpp sequencer.hpp \
 	singletextcombo.cpp singletextcombo.hpp \
@@ -21,4 +22,4 @@ dino_SOURCES = \
 	trackwidget.cpp trackwidget.hpp \
 	evilscrolledwindow.hpp
 
-dino_LDADD = @LIBGLADEMM_LIBS@ @GTHREAD_LIBS@ @LIBXMLPP_LIBS@ @ALSA_LIBS@ @JACK_LIBS@ @LADCCA_LIBS@
+dino_LDADD = @LIBGLADEMM_LIBS@ @GTHREAD_LIBS@ @LIBXMLPP_LIBS@ @JACK_LIBS@ @LADCCA_LIBS@
