Moved source files to subdirectories

--- a/configure.ac
+++ b/configure.ac
@@ -5,8 +5,8 @@ AC_PREREQ(2.59)
 
 # Don't touch this line - it's updated automagically by dcvs
 AC_INIT(dino, 0.1.23)
-
-AC_CONFIG_SRCDIR([src/main.cpp])
+AC_PROG_LIBTOOL
+AC_CONFIG_SRCDIR([src/gui/main.cpp])
 AM_INIT_AUTOMAKE
 
 # Checks for programs.
@@ -28,5 +28,5 @@ AC_C_CONST
 AC_C_INLINE
 
 # Output
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile src/libdinoseq/Makefile src/gui/Makefile])
 AC_OUTPUT
