Fixed a sequencer bug that caused notes to hang if a sequence entry was shorter than its pattern

--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -10,6 +10,7 @@ libdinoseq_la_SOURCES = \
 	song.cpp song.hpp \
 	ringbuffer.hpp \
 	sequencer.cpp sequencer.hpp \
-	tempomap.cpp tempomap.hpp
+	tempomap.cpp tempomap.hpp \
+	cdtree.hpp
 
 libdinoseq_la_LIBADD = @LIBXMLPP_LIBS@ @JACK_LIBS@
