--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -3,6 +3,7 @@ AM_CPPFLAGS = @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @DEBUG_CFLAGS@
 noinst_LTLIBRARIES = libdinoseq.la
 
 libdinoseq_la_SOURCES = \
+	deletable.hpp \
 	deleter.cpp deleter.hpp \
 	midievent.cpp midievent.hpp \
 	pattern.cpp pattern.hpp \
