Cleaned up namespace pollutions in the GUI header files

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -5,6 +5,7 @@ bin_PROGRAMS = dino
 dino_SOURCES = \
 	main.cpp \
 	dinogui.cpp dinogui.hpp \
+	evilscrolledwindow.hpp \
 	octavelabel.cpp octavelabel.hpp \
 	patterneditor.cpp patterneditor.hpp \
 	ruler.cpp ruler.hpp \
@@ -12,7 +13,6 @@ dino_SOURCES = \
 	tempolabel.cpp tempolabel.hpp \
 	tempowidget.cpp tempowidget.hpp \
 	tracklabel.hpp tracklabel.cpp \
-	trackwidget.cpp trackwidget.hpp \
-	evilscrolledwindow.hpp
+	trackwidget.cpp trackwidget.hpp
 
 dino_LDADD = @LIBGLADEMM_LIBS@ @LIBXMLPP_LIBS@ @JACK_LIBS@ @LASH_LIBS@ ../libdinoseq/libdinoseq.la
