Restructured the MIDI event classes a bit to hide pattern implementation details from the sequencer

--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -3,9 +3,10 @@ AM_CPPFLAGS = @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @DEBUG_CFLAGS@
 noinst_LTLIBRARIES = libdinoseq.la
 
 libdinoseq_la_SOURCES = \
+	basemidievent.hpp basemidievent.cpp \
 	deletable.hpp \
 	deleter.cpp deleter.hpp \
-	midievent.cpp midievent.hpp \
+	noteevent.cpp noteevent.hpp \
 	pattern.cpp pattern.hpp \
 	track.cpp track.hpp \
 	song.cpp song.hpp \
