Renamed BaseMIDIEvent to MIDIEvent

--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -3,9 +3,9 @@ AM_CPPFLAGS = @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @DEBUG_CFLAGS@
 noinst_LTLIBRARIES = libdinoseq.la
 
 libdinoseq_la_SOURCES = \
-	basemidievent.hpp basemidievent.cpp \
 	deletable.hpp \
 	deleter.cpp deleter.hpp \
+	midievent.hpp midievent.cpp \
 	noteevent.cpp noteevent.hpp \
 	pattern.cpp pattern.hpp \
 	track.cpp track.hpp \
