Started implementing the new CC editor

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -4,6 +4,7 @@ bin_PROGRAMS = dino
 
 dino_SOURCES = \
 	main.cpp \
+	cceditor.cpp cceditor.hpp \
 	dinogui.cpp dinogui.hpp \
 	evilscrolledwindow.hpp \
 	octavelabel.cpp octavelabel.hpp \
