--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -3,6 +3,8 @@ AM_CPPFLAGS = @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @DEBUG_CFLAGS@
 noinst_LTLIBRARIES = libdinoseq.la
 
 libdinoseq_la_SOURCES = \
+	ccevent.cpp ccevent.hpp \
+	controller.cpp controller.hpp \
 	deletable.cpp deletable.hpp \
 	deleter.cpp deleter.hpp \
 	midievent.hpp midievent.cpp \
