Cleaned up a few XXXs

--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -6,7 +6,7 @@ libdinoseq_la_SOURCES = \
 	ccevent.cpp ccevent.hpp \
 	controller.cpp controller.hpp \
 	deletable.cpp deletable.hpp \
-	deleter.cpp deleter.hpp \
+	deleter.hpp \
 	midievent.hpp midievent.cpp \
 	note.cpp note.hpp \
 	noteevent.cpp noteevent.hpp \
