Added TrackDialog and fixed some crashing bugs. Somewhat broken.

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -13,6 +13,7 @@ dino_SOURCES = \
 	singletextcombo.cpp singletextcombo.hpp \
 	tempolabel.cpp tempolabel.hpp \
 	tempowidget.cpp tempowidget.hpp \
+	trackdialog.cpp trackdialog.hpp \
 	tracklabel.hpp tracklabel.cpp \
 	trackwidget.cpp trackwidget.hpp
 
