--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@
 AC_PREREQ(2.59)
 
 # Don't touch this line - it's updated automagically by dcvs
-AC_INIT(dino, 0.1.156)
+AC_INIT(dino, 0.1.157)
 AC_PROG_LIBTOOL
 AC_CONFIG_SRCDIR([src/gui/main.cpp])
 AM_INIT_AUTOMAKE
@@ -42,6 +42,7 @@ AC_CONFIG_FILES([
 	Makefile 
 	src/Makefile
 	src/libdinoseq/Makefile
-	src/gui/Makefile])
+	src/gui/Makefile
+	pixmaps/Makefile])
 
 AC_OUTPUT
