--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @LASH_CFLAGS@ @DEBUG_CFLAGS@ -DDATA_DIR=\"$(pkgdatadir)\" -DCR_YEAR=\"2006\" -I../libdinoseq
+AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @LASH_CFLAGS@ @DEBUG_CFLAGS@ -I../libdinoseq
 
 bin_PROGRAMS = dino
 
