--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -6,6 +6,7 @@ libdinoseq_la_SOURCES = \
 	controller.cpp controller.hpp \
 	deleter.hpp \
 	interpolatedevent.cpp interpolatedevent.hpp \
+	midibuffer.cpp midibuffer.hpp \
 	midievent.cpp midievent.hpp \
 	note.cpp note.hpp \
 	noteevent.cpp noteevent.hpp \
