--- a/src/libdinoseq/Makefile.am
+++ b/src/libdinoseq/Makefile.am
@@ -1,10 +1,12 @@
 AM_CPPFLAGS = @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @DEBUG_CFLAGS@
 
-noinst_LTLIBRARIES = libdinoseq.la
+lib_LTLIBRARIES = libdinoseq.la
 
 libdinoseq_la_SOURCES = \
-	controller_numbers.hpp \
+	cdtree.hpp \
 	controller.cpp controller.hpp \
+	controller_numbers.hpp \
+	debug.hpp debug.cpp \
 	deleter.hpp \
 	interpolatedevent.cpp interpolatedevent.hpp \
 	midibuffer.cpp midibuffer.hpp \
@@ -13,13 +15,31 @@ libdinoseq_la_SOURCES = \
 	noteevent.cpp noteevent.hpp \
 	pattern.cpp pattern.hpp \
 	patternselection.cpp patternselection.hpp \
-	track.cpp track.hpp \
-	song.cpp song.hpp \
 	ringbuffer.hpp \
 	sequencer.cpp sequencer.hpp \
+	song.cpp song.hpp \
 	tempomap.cpp tempomap.hpp \
+	track.cpp track.hpp \
+	xmlserialisable.hpp
+
+pkginclude_HEADERS = \
 	cdtree.hpp \
-	debug.hpp debug.cpp \
+	controller.hpp \
+	controller_numbers.hpp \
+	debug.hpp \
+	deleter.hpp \
+	interpolatedevent.hpp \
+	midibuffer.hpp \
+	note.hpp \
+	notecollection.hpp \
+	noteevent.hpp \
+	pattern.hpp \
+	patternselection.hpp \
+	ringbuffer.hpp \
+	sequencer.hpp \
+	song.hpp \
+	tempomap.hpp \
+	track.hpp \
 	xmlserialisable.hpp
 
 libdinoseq_la_LIBADD = @LIBXMLPP_LIBS@ @JACK_LIBS@
